tests/negative/print_missing_arg.spk
(print "$0 and $1" "only one")
